@startuml classes
top to bottom direction

hide empty fields
hide empty methods

package "High Level Classes" as HLC <<Rectangle>> {
  class NetlinkGeneric {
    get_interface()
    get_list_interfaces()
    get_phy()
    get_list_phys()
    set_if_type()
    set_if_frequency()
    set_if_channel()
  }

  class NetlinkRoute {
    get_kernel()
    link_change()
  }
}

package "Low Level Classes" as LLC <<Rectangle>> {
  class nlsocket_t
  class nlcb_t
  class nlmsg_t

  class rtnl_link_t
  class nlcache_t
  class nlattr_t
}

package "nlpp Custom Types" as CT <<Rectangle>> { 
  class dev_info_t
  class dev_capability_t
}

' From HLC
NetlinkGeneric *--> nlsocket_t
NetlinkGeneric -.> nlmsg_t
NetlinkGeneric -.> dev_info_t
NetlinkGeneric -.> dev_capability_t
NetlinkRoute *--> nlsocket_t
NetlinkRoute -.> rtnl_link_t

' From LLC
nlsocket_t o--> nlcb_t
nlmsg_t .-> nlattr_t


@enduml